<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/round_button_settings"
        >


        <ImageButton
            android:id="@+id/imageButtonAtrasConf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="13"
            android:background="@drawable/sombra"
            app:srcCompat="?attr/actionModeCloseDrawable" />
        <TextView
            android:id="@+id/txtViewMatriculaRelevoConfi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="82"
            android:textStyle="bold"
            android:textSize="28dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text=""/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginTop="5dp"
        android:id="@+id/text_nombre"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:id="@+id/nombreInput"
            android:textSize="18dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginTop="15dp"
        android:id="@+id/text_empleo"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empleo"
            android:id="@+id/empleoInput"
            android:textSize="18dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/text_kilometros"
        android:layout_marginTop="15dp"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kilometros"
            android:id="@+id/kilometrosInput"
            android:textSize="18dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:padding="10dp"
        android:textColor="@color/black"
        android:gravity="center|left"
        android:textSize="18dp"
        android:text="@string/novedades"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ediNovedades"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="38"
        android:padding="10dp"
        android:gravity="center|left|top"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:text=""/>


    <Button
        android:id="@+id/btnRelevar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:background="@color/azul"
        android:text="@string/confRelevo"
        android:textSize="20dp"
        android:textColor="@color/blanco"
        android:textStyle="bold" />

</LinearLayout>